--- a/pom.xml
+++ b/pom.xml
@@ -20,44 +20,46 @@
           <version>3.0.1</version>
           <scope>provided</scope>
       </dependency>
-      <!--<dependency>-->
-         <!--<groupId>iTransformers</groupId>-->
-          <!--<artifactId>expect4groovy</artifactId>-->
-          <!--<version>1.1-SNAPSHOT</version>-->
-      <!--</dependency>-->
       <dependency>
-          <groupId>org.codehaus.gmaven.runtime</groupId>
-          <artifactId>gmaven-runtime-2.0</artifactId>
-          <version>1.5</version>
+         <groupId>iTransformers</groupId>
+          <artifactId>expect4groovy</artifactId>
+          <version>1.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+          <groupId>org.codehaus.groovy</groupId>
+          <artifactId>groovy-all</artifactId>
+          <version>2.1.8</version>
       </dependency>
   </dependencies>
   <build>
     <finalName>ServLetDDOSExample</finalName>
     <plugins>
         <plugin>
-            <groupId>org.apache.tomcat.maven</groupId>
-            <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.2</version>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <!-- 2.8.0-01 and later require maven-compiler-plugin 3.1 or higher -->
+            <version>3.1</version>
             <configuration>
-                <url>http://localhost:8080/manager/text</url>
-                <server>deploymentRepo</server>
-                <path>/ServLetDDOSExample</path>
+                <compilerId>groovy-eclipse-compiler</compilerId>
+                <!-- set verbose to be true if you want lots of uninteresting messages -->
+                <!-- <verbose>true</verbose> -->
             </configuration>
+            <dependencies>
+                <dependency>
+                    <groupId>org.codehaus.groovy</groupId>
+                    <artifactId>groovy-eclipse-compiler</artifactId>
+                    <version>2.8.0-01</version>
+                </dependency>
+                <!-- for 2.8.0-01 and later you must have an explicit dependency on groovy-eclipse-batch -->
+                <dependency>
+                    <groupId>org.codehaus.groovy</groupId>
+                    <artifactId>groovy-eclipse-batch</artifactId>
+                    <version>2.1.8-01</version>
+                    <!-- or choose a different compiler version -->
+                    <!-- <version>1.8.6-01</version> -->
+                    <!-- <version>1.7.10-06</version> -->
+                </dependency>
+            </dependencies>
         </plugin>
-            <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>gmaven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <!--<goal>generateStubs</goal>-->
-                            <goal>compile</goal>
-                            <goal>generateTestStubs</goal>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
     <repositories>
