--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
           <artifactId>groovy-all</artifactId>
           <version>2.1.8</version>
       </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.9</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
   <build>
     <finalName>ServLetDDOSExample</finalName>
