--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,9 @@
             <configuration>
                 <compilerId>groovy-eclipse-compiler</compilerId>
                 <!-- set verbose to be true if you want lots of uninteresting messages -->
-                <!-- <verbose>true</verbose> -->
+                <source>1.6</source>
+                <target>1.6</target>
+                 <!--<verbose>true</verbose>-->
             </configuration>
             <dependencies>
                 <dependency>
