Adding copyright and updating groupIds

--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,82 @@
+<!--
+  ~ pom.xml
+  ~
+  ~ Copyright [2016] [iTransformers Labs Ltd - http://itransformers.net]
+  ~
+  ~ DDOS servlet filter has been created by Nikolay Milovanov and Vasil Yordanov with the purpose of defending enterprise java applications from DDOS (Distributed Denial of Service Attacks) by blackholing the attacker traffic by applying RFC rfc5635 - Remote Triggered Black Hole Filtering with Unicast Reverse Path Forwarding (uRPF)
+  ~
+  ~ DDOS servlet filter has been licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>iTransformers</groupId>
+  <groupId>net.itransformers</groupId>
   <artifactId>DDOSServletFilter</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>ServLetDDOSExample</name>
-  <url>http://github.com/iTransformers/DDOSServletFilter</url>
-  <dependencies>
+  <version>1.0.0</version>
+  <name>DDOS Servlet Filter</name>
+  <url>http://itransformers.net/ddos-protection-java</url>
+  <description>DDOS servlet filter is able to apply a remotely triggered black holing as per RFC 5635!</description>
+    <organization>
+        <name>iTransformers Labs</name>
+        <url>http://itransformers.net</url>
+    </organization>
+    <issueManagement>
+        <url>https://github.com/iTransformers/DDOSServletFIlter/issues</url>
+        <system>GitHub Issues</system>
+    </issueManagement>
+    <developers>
+        <developer>
+            <id>niau</id>
+            <name>Nikolay Milovanov</name>
+            <email>nmil itransformers dot net</email>
+            <url>http://niau.org</url>
+            <organization>iTransformers Labs</organization>
+            <organizationUrl>http://itransformers.net</organizationUrl>
+            <roles>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>Europe/Sofia</timezone>
+        </developer>
+        <developer>
+            <id>vasil-yordanov</id>
+            <name>Vasil Yordanov</name>
+            <email>vasil.yordanov gmail dot com</email>
+            <organization>iTransformers Labs</organization>
+            <organizationUrl>http://itransformers.net</organizationUrl>
+            <roles>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>Europe/Sofia</timezone>
+        </developer>
+    </developers>
+
+
+    <licenses>
+        <license>
+            <name>Apache License v 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <url>https://github.com/iTransformers/DDOSServletFIlter</url>
+    </scm>
+
+    <dependencies>
 
       <dependency>
           <groupId>javax.servlet</groupId>
@@ -35,16 +104,16 @@
   <build>
     <finalName>ServLetDDOSExample</finalName>
     <plugins>
-        <!--<plugin>-->
-            <!--<groupId>org.apache.tomcat.maven</groupId>-->
-            <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
-            <!--<version>2.2</version>-->
-            <!--<configuration>-->
-                <!--<url>http://localhost:8080/manager/text</url>-->
-                <!--<server>deploymentRepo</server>-->
-                <!--<path>/ServLetDDOSExample</path>-->
-            <!--</configuration>-->
-        <!--</plugin>-->
+        <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <url>http://localhost:8080/manager/text</url>
+                <server>deploymentRepo</server>
+                <path>/ServLetDDOSExample</path>
+            </configuration>
+        </plugin>
         <plugin>
             <groupId>org.apache.tomcat.maven</groupId>
             <artifactId>tomcat7-maven-plugin</artifactId>
@@ -83,18 +152,66 @@
                 </dependency>
             </dependencies>
         </plugin>
+        <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.3</version>
+            <executions>
+                <execution>
+                    <id>default-deploy</id>
+                    <phase>deploy</phase>
+                    <goals>
+                        <goal>deploy</goal>
+                    </goals>
+                </execution>
+            </executions>
+
+            <configuration>
+
+                <serverId>ossrh</serverId>
+                <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                <autoReleaseAfterClose>true</autoReleaseAfterClose>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>2.2.1</version>
+            <executions>
+                <execution>
+                    <id>attach-sources</id>
+                    <goals>
+                        <goal>jar-no-fork</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.9.1</version>
+            <executions>
+                <execution>
+                    <id>attach-javadocs</id>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
         </plugins>
     </build>
-    <repositories>
-        <!-- tcljava is provided by SpringSource -->
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
         <repository>
-            <id>itransformers-repo</id>
-            <url>http://repo.itransformers.net/repos/</url>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
-        <repository>
-            <id>mvnrepo</id>
-            <url>http://mvnrepository.com/artifact/</url>
-        </repository>
-    </repositories>
+
+
+    </distributionManagement>
 
 </project>
